Title alignment bugsssssssssssszzzzzzZZZZZZZ

--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,10 @@ a{
 	line-height: 1;
 	letter-spacing: 6px;
     color: rgba(255,255,255,0.80);
-	margin-left: 0%;
+	margin-left: 10%;
 	margin-top: 5%;
 	width: 50%;
-	text-align: center;
+	text-align: left;
 	text-transform: uppercase;
     -webkit-transition: color 0.5s;
     -moz-transition: color 0.5s;
